# zeno

./: .gitignore  README.md  build.zig  mkdocs.yml  visualize_demo.py  viz_swarm.py
assets/: ant.xml  cartpole.xml  cheetah.xml  hopper.xml  humanoid.xml  pendulum.xml  pusher.xml  reacher.xml  swimmer.xml  walker.xml
benchmarks/: bench_collision.zig  bench_envs.zig  bench_full_physics.zig  bench_integration.zig  bench_swarm.zig  compare_mujoco.py  validate_physics.py
docs/: index.md
examples/: replay_viewer.py  swarm_basic.py  swarm_scaling.py
python/: pyproject.toml
python/zeno/: __init__.py  _ffi.py  env.py  swarm.py  wrappers.py
python/zeno/examples/: __init__.py  __main__.py
python/zeno/examples/basic/: __init__.py  cartpole.py  forces.py  joints.py  pendulum.py  shapes.py  viewer.py
python/zeno/examples/benchmark/: __init__.py  comparison.py  latency.py  memory.py  scaling.py  throughput.py
python/zeno/examples/robot/: __init__.py  ant.py  cheetah.py  hopper.py  humanoid.py  policy.py  pusher.py  reacher.py  swimmer.py  walker.py
python/zeno/examples/training/: __init__.py  batched_training.py  curriculum.py  evolution.py  imitation.py  ppo.py  random_search.py
python/zeno/examples/utils/: __init__.py  checkpointing.py  domain_randomization.py  parallel_evaluation.py  reset_patterns.py  reward_shaping.py  state_access.py
python/zeno/gym/: __init__.py  registration.py
scripts/: test_python.sh
src/: main.zig  objc.zig
tests/: check_abi_contract.py  test_collision.zig  test_environments.zig  test_fluid.zig  test_memory.zig  test_metal.zig  test_mjcf.zig  test_physics.zig  test_physics_integration.zig  test_python_integration.py  test_sensors.zig  test_softbody.zig  test_swarm.zig  test_tendon.zig  test_xpbd.zig
(+63 files in other folders)
